Platform updates for sw-field

--- a/Resources/administration/src/app/component/form/sw-number-field/sw-number-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-number-field/sw-number-field.html.twig
@@ -6,7 +6,7 @@
                :value="stringRepresentation"
                :placeholder="placeholder"
                :disabled="disabled"
-               autocomplete="false"
+               autocomplete="off"
                @keydown.up="increaseNumberByStep"
                @keydown.down="decreaseNumberByStep"
                @change="onChange"
