NEXT-2751 - Fix listing empty state

--- a/Resources/administration/src/module/sw-newsletter-receiver/page/sw-newsletter-receiver-list/sw-newsletter-receiver-list.twig
+++ b/Resources/administration/src/module/sw-newsletter-receiver/page/sw-newsletter-receiver-list/sw-newsletter-receiver-list.twig
@@ -51,6 +51,10 @@
                                 </template>
                             </template>
                         </sw-entity-listing>
+
+                        {% block sw_newsletter_receiver_list_empty_state %}
+                            <sw-empty-state v-if="!isLoading && !total" :title="$tc('sw-newsletter-receiver.list.messageEmpty')"></sw-empty-state>
+                        {% endblock %}
                     {% endblock %}
                 {% endblock %}
             </template>
