--- a/Resources/administration/src/app/component/form/sw-switch-field/sw-switch-field.scss
+++ b/Resources/administration/src/app/component/form/sw-switch-field/sw-switch-field.scss
@@ -33,7 +33,7 @@ $sw-field--switch-color-inherit: $color-purple;
         font-size: 14px;
     }
 
-    .sw-field__switch {
+    .sw-field--switch__input {
         position: relative;
         padding-top: 3px;
         width: 24px;
