--- a/Resources/administration/src/app/component/form/field-base/sw-base-field/sw-base-field.scss
+++ b/Resources/administration/src/app/component/form/field-base/sw-base-field/sw-base-field.scss
@@ -1,9 +1,5 @@
 @import "~scss/variables";
 
-$sw-field-color-label: $color-kashmir;
-$sw-field-color-label-inherited: $color-purple;
-$sw-field-color-label-error: $color-crimson;
-
 .sw-field {
     width: 100%;
     margin-bottom: 22px;
@@ -13,7 +9,7 @@ $sw-field-color-label-error: $color-crimson;
         line-height: 16px;
         font-size: 14px;
         margin-bottom: 8px;
-        color: $sw-field-color-label;
+        color: $color-kashmir;
 
         label {
             flex-grow: 1;
@@ -21,7 +17,7 @@ $sw-field-color-label-error: $color-crimson;
     }
 
     .sw-field__button-restore {
-        color: $sw-field-color-label;
+        color: $color-kashmir;
         padding: 0 8px;
         border: none;
         background: none;
@@ -38,7 +34,7 @@ $sw-field-color-label-error: $color-crimson;
     &.is--inherited {
         .sw-field__label,
         .sw-field__button-restore {
-            color: $sw-field-color-label-inherited;
+            color: $color-purple;
         }
     }
 }
