--- a/Resources/administration/src/module/sw-cms/elements/product-box/component/sw-cms-el-product-box.scss
+++ b/Resources/administration/src/module/sw-cms/elements/product-box/component/sw-cms-el-product-box.scss
@@ -63,7 +63,7 @@
         flex-grow: 1;
         flex-shrink: 0;
         flex-basis: 180px;
-        margin: 10px 10px 0 10px;
+        margin: 20px 15px 15px 15px;
     }
 
     .sw-cms-el-product-box__image-link {
@@ -97,7 +97,7 @@
     }
 
     .sw-cms-el-product-box__info {
-        margin: 16px 10px 10px 10px;
+        margin: 0 15px 20px 15px;
         flex-shrink: 1;
         flex-grow: 1;
         flex-basis: 60%;
@@ -105,8 +105,8 @@
 
     .sw-cms-el-product-box__name {
         display: block;
-        max-height: 40px;
         font-size: 18px;
+        margin-bottom: 23px;
         line-height: 20px;
         overflow: hidden;
         text-decoration: none;
@@ -125,10 +125,6 @@
         overflow: hidden;
     }
 
-    .sw-cms-el-product-box__price-info {
-        margin-top: 10px;
-    }
-
     .sw-cms-el-product-box__price-unit {
         height: 36px;
         font-size: 14px;
@@ -145,7 +141,6 @@
 
     .sw-cms-el-product-box__price {
         height: 20px;
-        margin-top: 10px;
         font-size: 18px;
         font-weight: bold;
         line-height: 20px;
@@ -154,26 +149,38 @@
     }
 
     .sw-cms-el-product-box__actions {
-        margin-top:20px;
+        margin-top: 20px;
+    }
 
-        .sw-cms-el-product-box__detail-action {
-            display: block;
-            margin-top: 10px;
-            line-height: 38px;
-            font-size: 14px;
-            font-weight: bold;
-            text-align: center;
-            text-decoration: none;
-            color: #5f7285;
-            background: $color-link-water;
-            border: 1px solid #dadee5;
-            border-radius: 4px;
+    .sw-cms-el-product-box__detail-action {
+        display: block;
+        line-height: 38px;
+        font-size: 14px;
+        font-weight: bold;
+        text-align: center;
+        text-decoration: none;
+        color: #5f7285;
+        background: $color-link-water;
+        border: 1px solid #dadee5;
+        border-radius: 4px;
 
-            &:hover {
-                color: #465462;
-                background: darken($color-link-water, 5%);
-            }
+        &:hover {
+            color: #465462;
+            background: darken($color-link-water, 5%);
         }
+    }
+
+    .sw-cms-el-product-box__buy-action {
+        display: block;
+        margin-top: 23px;
+        line-height: 40px;
+        font-size: 14px;
+        font-weight: bold;
+        text-align: center;
+        text-decoration: none;
+        color: #fff;
+        background: linear-gradient(to bottom, #7793ae 0%, #6a849c 100%);
+        border-radius: 4px;
 
         .sw-cms-el-product-box__buy-action {
             display: block;
