--- a/Resources/administration/src/module/sw-cms/elements/product-listing/component/sw-cms-el-product-listing.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/product-listing/component/sw-cms-el-product-listing.html.twig
@@ -1,5 +1,27 @@
 {% block sw_cms_element_product_listing %}
     <div class="sw-cms-el-product-listing">
-        <div>Listing Placeholder</div>
+
+        <div class="sw-cms-el-product-listing__content">
+            <sw-cms-el-product-box :element="demoProductElement"></sw-cms-el-product-box>
+            <sw-cms-el-product-box :element="demoProductElement"></sw-cms-el-product-box>
+            <sw-cms-el-product-box :element="demoProductElement"></sw-cms-el-product-box>
+            <sw-cms-el-product-box :element="demoProductElement"></sw-cms-el-product-box>
+            <sw-cms-el-product-box :element="demoProductElement"></sw-cms-el-product-box>
+            <sw-cms-el-product-box :element="demoProductElement"></sw-cms-el-product-box>
+        </div>
+
+        <div class="sw-cms-el-product-listing__pagination">
+            <div class="sw-cms-el-product-listing__pagination-entry">
+                <sw-icon name="small-arrow-small-left" size="20px"></sw-icon>
+            </div>
+
+            <div class="sw-cms-el-product-listing__pagination-entry">1</div>
+            <div class="sw-cms-el-product-listing__pagination-entry">2</div>
+            <div class="sw-cms-el-product-listing__pagination-entry">3</div>
+
+            <div class="sw-cms-el-product-listing__pagination-entry">
+                <sw-icon name="small-arrow-small-right" size="20px"></sw-icon>
+            </div>
+        </div>
     </div>
 {% endblock %}
