--- a/Resources/administration/src/module/sw-cms/elements/product-listing/component/sw-cms-el-product-listing.scss
+++ b/Resources/administration/src/module/sw-cms/elements/product-listing/component/sw-cms-el-product-listing.scss
@@ -1,14 +1,44 @@
 @import "~scss/variables";
 
 .sw-cms-el-product-listing {
-    min-height: 200px;
-    padding: 60px 200px;
-    display: grid;
-    align-items: center;
-    align-content: center;
-    justify-items: center;
-    justify-content: center;
-    background: $color-light-gray;
-    border: 1px dashed $color-steam-cloud;
-    border-radius: 4px;
+    padding: 30px;
+
+    .sw-cms-el-product-listing__content {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        place-items: stretch;
+        gap: 24px;
+    }
+
+    .sw-cms-el-product-listing__pagination {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, 40px);
+        justify-content: center;
+        margin-top: 24px;
+
+        .sw-cms-el-product-listing__pagination-entry {
+            height: 40px;
+            width: 40px;
+            display: grid;
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+            border-right: 1px solid $color-steam-cloud;
+            border-bottom: 1px solid $color-steam-cloud;
+            border-top: 1px solid $color-steam-cloud;
+
+            .sw-icon {
+                color: $color-gutenberg;
+            }
+
+            &:first-of-type {
+                border-radius: 4px 0 0 4px;
+                border-left: 1px solid $color-steam-cloud;
+            }
+
+            &:last-of-type {
+                border-radius: 0 4px 4px 0;
+            }
+        }
+    }
 }
