NEXT-3021 - fix shipping bugs

--- a/Resources/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrix/sw-settings-shipping-price-matrix.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrix/sw-settings-shipping-price-matrix.html.twig
@@ -10,6 +10,7 @@
                                            :ruleFilter="ruleFilter"
                                            size="small"
                                            :placeholder="$tc('sw-settings-shipping.priceMatrix.noRestriction')"
+                                           :required="hasNoRuleMatrix"
                                            @save-rule="onSaveRule"
                                            @dismiss-rule="$emit('rule-change', $event, priceGroup.ruleId)">
                         <template slot="result_items" slot-scope="{ item, index }">
