--- a/Resources/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrices/sw-settings-shipping-price-matrices.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrices/sw-settings-shipping-price-matrices.html.twig
@@ -16,7 +16,8 @@
         {% block sw_settings_shipping_detail_advanced_prices_actions %}
             <div class="sw-settings-shipping-price-matrices__actions">
                 {% block sw_settings_shipping_detail_advanced_prices_actions_add_button %}
-                    <sw-button v-if="canAddPriceRule" @click="onAddNewPriceGroup">
+                    <sw-button :disabled="!canAddPriceRule"
+                               @click="onAddNewPriceGroup">
                         {{ $tc('sw-settings-shipping.priceMatrix.buttonAddAdditionalPriceRule') }}
                     </sw-button>
                 {% endblock %}
