--- a/Resources/administration/src/module/sw-cms/component/sw-cms-page-form/sw-cms-page-form.scss
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-page-form/sw-cms-page-form.scss
@@ -10,4 +10,9 @@
             border-bottom: 0 none;
         }
     }
+
+    .sw-cms-page-form__language-warning {
+        max-width: 800px;
+        margin: auto;
+    }
 }
