--- a/Resources/administration/src/module/sw-settings-salutation/page/sw-settings-salutation-detail/sw-settings-salutation-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-salutation/page/sw-settings-salutation-detail/sw-settings-salutation-detail.html.twig
@@ -33,12 +33,16 @@
                 {% endblock %}
 
                 {% block sw_settings_salutation_detail_actions_save %}
-                    <sw-button class="sw-settings-salutation-detail__save"
-                               :disabled="!salutation.salutationKey || invalidKey || isKeyChecking"
-                               variant="primary"
-                               @click="onSave">
+                    <sw-button-process
+                        class="sw-settings-salutation-detail__save"
+                        :isLoading="isLoading"
+                        :processSuccess="isSaveSuccessful"
+                        :disabled="!salutation.salutationKey || isLoading || invalidKey || isKeyChecking"
+                        variant="primary"
+                        @process-finish="saveFinish"
+                        @click="onSave">
                         {{ $tc('sw-settings-salutation.general.buttonSave') }}
-                    </sw-button>
+                    </sw-button-process>
                 {% endblock %}
             </template>
         {% endblock %}
