--- a/Resources/administration/src/module/sw-settings-shipping/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/extension/sw-settings-index/sw-settings-index.html.twig
@@ -4,8 +4,7 @@
     {% block sw_settings_shipping_item %}
         <sw-settings-item id="sw-settings-shipping"
                           :label="$tc('sw-settings-shipping.general.mainMenuItemGeneral')"
-                          :to="{ name: 'sw.settings.shipping.index' }"
-                          :disabled="!next688">
+                          :to="{ name: 'sw.settings.shipping.index' }">
             <template slot="icon">
                 <sw-icon name="default-package-open"></sw-icon>
             </template>
