--- a/Resources/administration/src/module/sw-settings-payment/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-payment/extension/sw-settings-index/sw-settings-index.html.twig
@@ -4,8 +4,7 @@
     {% block sw_settings_payment_item %}
         <sw-settings-item id="sw-settings-payment"
                           :label="$tc('sw-settings-payment.general.mainMenuItemGeneral')"
-                          :to="{ name: 'sw.settings.payment.index' }"
-                          :disabled="!next687">
+                          :to="{ name: 'sw.settings.payment.index' }">
             <template slot="icon">
                 <sw-icon name="default-money-card"></sw-icon>
             </template>
