--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -42,7 +42,7 @@
                         class="sw-category-detail__save-action"
                         :isLoading="isLoading"
                         :processSuccess="isSaveSuccessful"
-                        :disabled="disableSaving"
+                        :disabled="isLoading"
                         variant="primary"
                         @process-finish="saveFinish"
                         @click.prevent="onSave">
